traefik-deployment.yaml
---
  apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: traefik-ingress-controller
    namespace: kocu
---
  kind: Deployment
  apiVersion: apps/v1
  metadata:
    name: traefik-ingress-controller
    namespace: kocu
    labels:
      k8s-app: traefik-ingress-lb
  spec:
    replicas: 1
    selector:
      matchLabels:
        k8s-app: traefik-ingress-lb
    template:
      metadata:
        labels:
          k8s-app: traefik-ingress-lb
          name: traefik-ingress-lb
      spec:
        serviceAccountName: traefik-ingress-controller
        terminationGracePeriodSeconds: 60
        containers:
        - image: traefik:v1.7
          name: traefik-ingress-lb
          ports:
          - name: http
            containerPort: 80
          - name: admin
            containerPort: 8080
          args:
          - --api
          - --kubernetes
          - --logLevel=INFO
---
  kind: Service
  apiVersion: v1
  metadata:
    name: traefik-ingress-service
    namespace: kocu
  spec:
    selector:
      k8s-app: traefik-ingress-lb
    ports:
      - protocol: TCP
        port: 80
        name: web
      - protocol: TCP
        port: 8080
        name: admin
    type: NodePort
