traefik-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui-service
  namespace: kocu
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - name: web
      port: 80
      targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui-ingress
  namespace: kocu
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: traefik.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: traefik-web-ui-service
              servicePort: web
