traefik-whoami.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: kocu
  name: whoami
  labels:
    app: whoami

spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: containous/whoami
          ports:
            - name: web
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  namespace: kocu
spec:
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    app: whoami
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whoami-ingress
  namespace: kocu
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: whoami.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: whoami-service
              servicePort: http
